Projeto Ionic Lazy Loading

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,14 @@
-page-home {
-
+#titulo{
+    text-align: center;
 }
+#login{
+        background: #000;
+        margin-top:5rem
+    }
+#cadastro{
+        background:#fff;
+        border: 1px solid #000;
+        color: #000;
+        margin-top: 2rem;
+    }
+
